fix issue with box and dia not rendering properly on mobile

--- a/site/static/css/components/tables.css
+++ b/site/static/css/components/tables.css
@@ -139,7 +139,10 @@ kbd {
 }
 
 /* === Table Cell Content === */
-.table-like td[data-pre-wrap],
 .table-like .pre-wrap {
   white-space: pre-wrap;
+}
+
+.instructions .table-like .pre-wrap {
+  font-family: var(--math-font);
 }
