--- a/site/static/css/variables.css
+++ b/site/static/css/variables.css
@@ -28,8 +28,8 @@
   /* === Typography === */
   /* Site-wide font */
   --sans: "Noto Sans";
-  /* Font for mathematical symbols and text */
-  --math-font: "Noto Sans Math", sans-serif;
+  --symbol-font: "Noto Sans Symbols 2", "Noto Sans Symbols";
+  --math-font: "Noto Sans Math", var(--symbol-font), "Noto Sans", sans-serif;
   --font-size: 16px;
   --line-height: 1.25;
   --font-size-xs: 11px;
